syntax = "proto3";

option java_package = "com.stackroute.musicmantra.noty5.emailserver.register";
option java_multiple_files = true;


service RegistrationEmailServer{
  rpc sendResetPasswordOTP(mailRequest) returns(OTPapiResponse);
  rpc sendRegistrationOTP(mailRequest)returns(OTPapiResponse);
  rpc sendregistedMail(mailRequest)returns(sentmailResponse);
}

message mailRequest{
  string emailid = 1;
}

message OTPapiResponse{
  string message = 1;
  int32 OTP = 2;
  int32 responsecode =3;
}


message sentmailResponse{
	string message = 1;
	int32 Responsecode = 2;
}

